# cursach

./: .gitignore  CMakeLists.txt  console.cpp  coursework.cpp  coursework.hpp  data.csv  russia.geojson
coursework/: CMakeLists.txt  console.cpp  coursework.cpp  coursework.h  coursework.hpp
